// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationsStatistics Component Render the ConfigurationsStatistics Component having populated props with no errors 1`] = `
<ConfigurationsStatistics
  proposals={
    Array [
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div
    className="stat-item"
  >
    <h2>
      Configuration Statistics
    </h2>
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Instruments
          </th>
          <th>
            Number of configurations
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            RSS
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            SALTICAM
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            HRS
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            BVIT
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ConfigurationsStatistics>
`;

exports[`ConfigurationsStatistics Component Render the ConfigurationsStatistics Component having unpopulated props with no errors 1`] = `
<ConfigurationsStatistics
  proposals={Array []}
>
  <div
    className="stat-item"
  >
    <h2>
      Configuration Statistics
    </h2>
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Instruments
          </th>
          <th>
            Number of configurations
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            RSS
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            SALTICAM
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            HRS
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            BVIT
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ConfigurationsStatistics>
`;
